fixed white space under footer

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ html, body {
   color: #11001c;
   background-color: #F7F6F9;
   min-height: 400px;
-  margin-bottom: 100px;
   padding: 0;
   
 }
